fix: Slick-slider shows all slides before initialization -> remove this "flickering effect"

--- a/wordpress/web/app/themes/decimus-child/scss/_slick.scss
+++ b/wordpress/web/app/themes/decimus-child/scss/_slick.scss
@@ -120,3 +120,13 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+
+.front-slider:not(.slick-initialized) {
+    visibility: hidden;
+    //display: none !important;
+}
+
+.front-slider.slick-initialized {
+    visibility: visible;
+    //display: none !important;
+}
