--- a/wordpress/web/app/themes/decimus-child/scss/slick-theme.scss
+++ b/wordpress/web/app/themes/decimus-child/scss/slick-theme.scss
@@ -142,6 +142,7 @@ $slick-opacity-not-active: 0.25 !default;
     min-height: 250px;
     margin-bottom: 40px;
     margin-top: 25px;
+    overflow-y: hidden;
 }
 
 .slick-dots {
